Bug#39321 Add an exclusive lock on Database::syncScavenge in Database::truncateTable before the lock of Table::syncObject just in case the truncateTable process has to call Database::forceRecordScavenge.  syncScavenge must be locked before Table::syncObject because the scavenger does it that way.

According to the Deadlock Predictor (SyncHandler.cpp), 
syncScavenge must also be locked before Database::syncTables.